# notabot

./: .gitignore  .lintstagedrc.js  .yarnrc.yml  ARCHITECTURE_DIAGRAM.md  BUSINESS_MODEL.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOY_CHECKLIST.md  INTEGRATION.md  README.md  SAFE.MD  SECURITY.md  WIDGET_ROADMAP.md  frontend_flow.md  package-lock.json  package.json
.cursor/rules/: main-project-rule.mdc  scaffold-eth.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security.md
.github/workflows/: ci.yml  solana-deploy.yml
backend/: package.json
contracts/: 4STEPSPROD.MD  coverage.json  hardhat.config.cjs  package.json
contracts/core/: MainAggregator.sol  VerificationSBT.sol  VerificationToken.sol
contracts/integrations/: WorldcoinAdapter.sol
contracts/interfaces/: IHumanityOracle.sol  IVerificationAdapter.sol
contracts/tests/: Aggregator.test.js  helpers.js
docs/: 4STEPSPROD.MD  ARCHITECTURE.md  DEMO_SCRIPT.md  INTEGRATION.md
frontend/: .gitignore  global.d.ts  next.config.mjs  package.json
frontend/app/: layout.tsx  page.module.css  page.tsx
solana/: .gitignore  ARCHITECTURE.md  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
solana/programs/notabot/: Cargo.toml
solana/programs/notabot/src/: errors.rs  lib.rs
solana/programs/notabot/src/instructions/: get_trust_score.rs  initialize_verification.rs  is_verified.rs  mod.rs  verify_user.rs
solana/programs/notabot/src/state/: mod.rs  user_verification.rs
(+10 files in other folders)
